--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,17 @@
             <artifactId>jackson-dataformat-xml</artifactId>
             <version>2.13.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.19.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.19.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
